@@ -2141,14 +2141,79 @@ cmd_show_weak_ref(struct ctl_context *ctx, const struct cmd_show_table *show,
     }
 }
 
+static bool
+filter_output(struct ctl_context *ctx,
+              const struct sset *filter_sset,
+              size_t base_length)
+{
+    const char *output = &ctx->output.string[base_length];
+    const char *value;
+
+    SSET_FOR_EACH (value, filter_sset) {
+        if (strcasestr(output, value)) {
+            return true;
+        }
+    }
+
+    ds_truncate(&ctx->output, base_length);
+
+    return false;
+}
+
+static void
+wildcard_filter(struct ctl_context *ctx,
+                const struct shash *filters,
+                size_t base_length)
+{
+    if (shash_is_empty(filters)) {
+        return;
+    }
+
+    struct sset *wildcard_filter = shash_find_data(filters, "");
+
+    if (wildcard_filter) {
+        filter_output(ctx, wildcard_filter, base_length);
+    }
+}
+
+static void
+table_filter(struct ctl_context *ctx,
+             const struct cmd_show_table *show,
+             const struct shash *filters,
+             size_t base_length)
+{
+    if (shash_is_empty(filters)) {
+        return;
+    }
+
+    const char *table_name =
+        show && show->table ? show->table->name : NULL;
+    struct sset *table_filter =
+        table_name ? shash_find_data(filters, table_name) : NULL;
+
+    if (table_filter && filter_output(ctx, table_filter, base_length)) {
+        return;
+    }
+
+    struct shash_node *node;
+    SHASH_FOR_EACH (node, filters) {
+        if (node->name[0] != '\0') {
+            ds_truncate(&ctx->output, base_length);
+            break;
+        }
+    }
+}
+
 /* 'shown' records the tables that has been displayed by the current
  * command to avoid duplicated prints.
  */
-static void
+static bool
 cmd_show_row(struct ctl_context *ctx, const struct ovsdb_idl_row *row,
-             int level, struct sset *shown)
+             int level, struct sset *shown, struct shash *filters)
 {
     const struct cmd_show_table *show = cmd_show_find_table_by_row(row);
+    size_t start_pos = ctx->output.length;
+    bool has_matching_child = false;
     size_t i;
 
     ds_put_char_multiple(&ctx->output, ' ', level * 4);
@@ -2164,7 +2229,7 @@ cmd_show_row(struct ctl_context *ctx, const struct ovsdb_idl_row *row,
     ds_put_char(&ctx->output, '\n');
 
     if (!show || sset_find(shown, show->table->name)) {
-        return;
+        goto filter;
     }
 
     sset_add(shown, show->table->name);
@@ -2192,7 +2257,9 @@ cmd_show_row(struct ctl_context *ctx, const struct ovsdb_idl_row *row,
                                                          ref_show->table,
                                                          &datum->keys[j].uuid);
                     if (ref_row) {
-                        cmd_show_row(ctx, ref_row, level + 1, shown);
+                        bool matched = cmd_show_row(ctx, ref_row, level + 1,
+                                                    shown, filters);
+                        has_matching_child |= matched;
                     }
                 }
                 continue;
@@ -2247,6 +2314,111 @@ cmd_show_row(struct ctl_context *ctx, const struct ovsdb_idl_row *row,
     }
     cmd_show_weak_ref(ctx, show, row, level);
     sset_find_and_delete_assert(shown, show->table->name);
+
+filter:
+    if (has_matching_child) {
+        if (!level) {
+            wildcard_filter(ctx, filters, start_pos);
+        }
+        return true;
+    }
+
+    table_filter(ctx, show, filters, start_pos);
+
+    return ctx->output.length > start_pos;
+}
+
+static char * OVS_WARN_UNUSED_RESULT
+init_filters(const char *filter_str,
+             const struct ovsdb_idl_table_class *top_table,
+             struct shash *filters)
+{
+    struct sset initialized_filters;
+    sset_from_delimited_string(&initialized_filters, filter_str, ",");
+
+    struct sset *global_set = xzalloc(sizeof *global_set);
+    sset_init(global_set);
+    char *error = NULL;
+
+    const char *item;
+    SSET_FOR_EACH (item, &initialized_filters) {
+        const struct ovsdb_idl_table_class *table = top_table;
+        const char *ptr = strchr(item, '(');
+        size_t len = strlen(item);
+
+        char *values = NULL;
+        char *table_name = NULL;
+        struct sset parsed_values;
+
+        if (ptr && item[len - 1] == ')') {
+            table_name = xmemdup0(item, ptr - item);
+            error = get_table(table_name, &table);
+            if (error) {
+                free(table_name);
+                goto cleanup;
+            }
+
+            values = xmemdup0(ptr + 1, len - (ptr - item + 2));
+            sset_from_delimited_string(&parsed_values, values, "|");
+
+            struct sset *value_set = shash_find_data(filters, table_name);
+            if (!value_set) {
+                value_set = xzalloc(sizeof *value_set);
+                sset_init(value_set);
+                sset_clone(value_set, &parsed_values);
+                shash_add(filters, table->name, value_set);
+            } else {
+                const char *v;
+                SSET_FOR_EACH (v, &parsed_values) {
+                    sset_add(value_set, v);
+                }
+            }
+
+            free(table_name);
+        } else if (ptr && item[len - 1] != ')') {
+            error = xasprintf("Malformed filter: missing closing ')'");
+            goto cleanup;
+
+        } else {
+            values = xstrdup(item);
+            sset_from_delimited_string(&parsed_values, values, "|");
+
+            const char *v;
+            SSET_FOR_EACH (v, &parsed_values) {
+                sset_add(global_set, v);
+            }
+        }
+
+        sset_destroy(&parsed_values);
+        free(values);
+    }
+
+    if (!sset_is_empty(global_set)) {
+        shash_add(filters, "", global_set);
+    } else {
+        sset_destroy(global_set);
+        free(global_set);
+    }
+
+cleanup:
+    if (error) {
+        sset_destroy(global_set);
+        free(global_set);
+    }
+    sset_destroy(&initialized_filters);
+    return error;
+}
+
+static void
+destroy_filters(struct shash *filters)
+{
+    struct shash_node *node;
+    SHASH_FOR_EACH (node, filters) {
+        struct sset *value_set = node->data;
+        sset_destroy(value_set);
+        free(value_set);
+    }
+    shash_destroy(filters);
 }
 
 static void
@@ -2254,12 +2426,25 @@ cmd_show(struct ctl_context *ctx)
 {
     const struct ovsdb_idl_row *row;
     struct sset shown = SSET_INITIALIZER(&shown);
+    struct shash filters = SHASH_INITIALIZER(&filters);
+
+    char *filter_str = shash_find_data(&ctx->options, "--filter");
+    if (filter_str && *filter_str) {
+        char *error = init_filters(filter_str,
+                                   cmd_show_tables[0].table, &filters);
+        if (error) {
+            destroy_filters(&filters);
+            ctx->error = error;
+            return;
+        }
+    }
 
     for (row = ovsdb_idl_first_row(ctx->idl, cmd_show_tables[0].table);
          row; row = ovsdb_idl_next_row(row)) {
-        cmd_show_row(ctx, row, 0, &shown);
+        cmd_show_row(ctx, row, 0, &shown, &filters);
     }
 
+    destroy_filters(&filters);
     ovs_assert(sset_is_empty(&shown));
     sset_destroy(&shown);
 }
@@ -2554,7 +2739,7 @@ ctl_init__(const struct ovsdb_idl_class *idl_class_,
     cmd_show_tables = cmd_show_tables_;
     if (cmd_show_tables) {
         static const struct ctl_command_syntax show =
-            {"show", 0, 0, "", pre_cmd_show, cmd_show, NULL, "", RO};
+            {"show", 0, 0, "", pre_cmd_show, cmd_show, NULL, "--filter=", RO};
         ctl_register_command(&show);
     }
 }
