@@ -1831,3 +1831,52 @@ AT_CHECK([ovs-vsctl --no-wait --bare --columns _uuid,name list bridge tst1], [0]
 
 OVS_VSCTL_CLEANUP
 AT_CLEANUP
+
+AT_SETUP([ovs-vsctl filter option usage])
+AT_KEYWORDS([ovs-vsctl filter option])
+
+OVS_VSWITCHD_START([dnl
+   add-port br0 p1 -- set Interface p1 type=internal ofport_request=1 -- \
+   add-port br0 tunnel_port \
+    -- set Interface tunnel_port type=geneve \
+           options:remote_ip=1.2.3.4 options:key=123 -- \
+   add-port br0 tunnel_port2 \
+    -- set Interface tunnel_port2 type=geneve \
+           options:remote_ip=1.2.3.5 options:key=125
+])
+
+AT_CHECK([ovs-vsctl --filter='geneve,interface(1.2.3.5)' show | grep Port | sort], [0], [dnl
+        Port tunnel_port2
+])
+
+AT_CHECK([ovs-vsctl --filter='geneve' show | grep Port | sort], [0], [dnl
+        Port br0
+        Port p1
+        Port tunnel_port
+        Port tunnel_port2
+])
+
+AT_CHECK([ovs-vsctl --filter='interface(geneve)' show | grep Port | sort], [0], [dnl
+        Port tunnel_port
+        Port tunnel_port2
+])
+
+AT_CHECK([ovs-vsctl --filter='interface(p1)' show | uuidfilt], [0], [dnl
+<0>
+    Bridge br0
+        fail_mode: secure
+        datapath_type: dummy
+        Port p1
+            Interface p1
+                type: internal
+])
+
+AT_CHECK([ovs-vsctl  --filter=$'interface\x28p1' show 2>&1 | uuidfilt], [0], [dnl
+ovs-vsctl: Malformed filter: missing closing ')'
+])
+
+AT_CHECK([ovs-vsctl --filter='interface1(p1)' show 2>&1  | uuidfilt], [0], [dnl
+ovs-vsctl: unknown table "interface1"
+])
+
+AT_CLEANUP
